--- a/homework1/index.html
+++ b/homework1/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>HW1</h1>
     <h1>Домашнее задание 2.1</h1>
-    <h1>Привет, мир!!</h1>
+    <h1>Привет, мир!!!</h1>
 </body>
 </html>
