check changed name

--- a/homework1/index.html
+++ b/homework1/index.html
@@ -15,5 +15,6 @@
     <p>3 July</p>
     <p>test branch added</p>
     <p>some code added, boss!</p>
+    <p>check changed name</p>
 </body>
 </html>
