--- a/homework1/index.html
+++ b/homework1/index.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>HomeWork1</title>
-</head>
-<body>
-    <h1>HW1</h1>
-    <h1>Домашнее задание 2.1</h1>
-    <h1>Привет, мир!!!</h1>
-    <p>Again hw1</p>
-    <p>УБРАЛ лишние !!!</p>
-    <p>3 July</p>
-    <p>test branch added</p>
-    <p>some code added, boss!</p>
-    <p>check changed name</p>
-</body>
+  </head>
+
+  <body>
+    <div class="top center">
+      <h1 class="header">
+        Добро пожаловать<br />
+        на мой сайт!
+      </h1>
+      <header class="header__text">
+        Вам предстоит пройти несколько увлекательных игр. Если готов - нажимай
+        <b>поехали</b> и <strong>приступай</strong>
+      </header>
+      <button class="header__button">Поехали!</button>
+    </div>
+    <div class="game-box center">
+      <div class="game-box__item game-box__item1">
+        <p class="game-box__text">Игра 1</p>
+      </div>
+      <div class="game-box__item game-box__item2">
+        <p class="game-box__text">Игра 2</p>
+      </div>
+      <div class="game-box__item game-box__item3">
+        <p class="game-box__text">Игра 3</p>
+      </div>
+    </div>
+  </body>
 </html>
