HW1, desktop only.

--- a/homework1/index.html
+++ b/homework1/index.html
@@ -24,16 +24,16 @@
       </header>
       <button class="header__button">Поехали!</button>
     </div>
+
     <div class="game-box center">
-      <div class="game-box__item game-box__item1">
+      <a href="#" class="game-box__item game-box__item1">
         <p class="game-box__text">Игра 1</p>
-      </div>
-      <div class="game-box__item game-box__item2">
+      </a>
+      <a href="#" class="game-box__item game-box__item2">
         <p class="game-box__text">Игра 2</p>
-      </div>
-      <div class="game-box__item game-box__item3">
+      </a><a href="#" class="game-box__item game-box__item3">
         <p class="game-box__text">Игра 3</p>
-      </div>
+      </a>
     </div>
   </body>
 </html>
