--- a/homework1/index.html
+++ b/homework1/index.html
@@ -31,7 +31,8 @@
       </a>
       <a href="#" class="game-box__item game-box__item2">
         <p class="game-box__text">Игра 2</p>
-      </a><a href="#" class="game-box__item game-box__item3">
+      </a>
+      <a href="#" class="game-box__item game-box__item3">
         <p class="game-box__text">Игра 3</p>
       </a>
     </div>
