--- a/homework1/index.html
+++ b/homework1/index.html
@@ -18,10 +18,10 @@
         Добро пожаловать<br />
         на мой сайт!
       </h1>
-      <header class="header__text">
+      <p class="header__text">
         Вам предстоит пройти несколько увлекательных игр. Если готов - нажимай
-        <b>поехали</b> и <strong>приступай</strong>
-      </header>
+        <b>поехали</b> и <b>приступай</b>
+      </p>
       <button class="header__button">Поехали!</button>
     </div>
 
