--- a/homework4/index.html
+++ b/homework4/index.html
@@ -41,10 +41,9 @@
       <div class="game-content">
         <p class="game-content__title">Времена года</p>
         <p class="game-content__text">
-          Вам предстоит пройти несколько увлекательных игр. Если готов - нажимай
-          <b>поехали</b> и <b>приступай</b>
+            Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому времени года он относится
         </p>
-        <button class="game-content__button">Поехали!</button>
+        <button class="game-content__button">Играть!</button>
       </div>
 
       <div class="game-img">
@@ -59,7 +58,7 @@
           При нажатии на кнопку играть, вы увидите несколько слов, которые вам
           необходимо запомнить.
         </p>
-        <button class="game-content__button">Поехали!</button>
+        <button class="game-content__button">Играть!</button>
       </div>
 
       <div class="game-img">
